--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&family=Open+Sans&display=swap');
+
+
 body {
     background-color: aqua;
 }
