--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,38 @@ body {
     background-color: rgba(255,159,0, 0.7);
     font-weight: bold;
 }
+
+.game-area {
+    background-color: rgba(193,193,193, 0.7);
+    background-color: rgba(193,193,193, 0.7);
+    margin: 3rem 2rem;
+    text-align: center;
+    padding: 2rem;
+    border-radius: 0.5rem;
+}
+.username-div {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    font-weight: bold;
+}
+#username {
+    width: 11rem;
+    height:2rem;
+}
+
+.play {
+    font-size: 1.5rem;
+    color: #faf9f6;
+    padding:0.5rem;
+    background-color: #FF9F00;
+    border-radius: 0.5rem;
+    border: 0.125rem solid #faf9f6;
+    border-style: 
+}
+.play:hover {
+    background-color:  rgba(255,159,0, 0.7);;
+}
+.button {
+    color:#faf9f6;
+    padding:0.5rem;
+}
