--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,15 @@
     box-sizing: border-box;
 }
 body {
-    background-image: url("../images/background-js-vs-p-quiz.webp") ;
-    background-size: cover;
+    background-image: url("../images/background-js-vs-p-quiz.webp");
+    background-repeat: no-repeat;
+    
+    /* background-size: cover; */
+    /* background-size: cover; */
+    background-position: center;
+    object-fit: cover;
     font-family: "Open Sans", sans-serif;
     color: #2B2B2B;
-    
 }
 
 /* --------- Heading */
@@ -80,9 +84,27 @@ body {
     border-style: 
 }
 .play:hover {
-    background-color:  rgba(255,159,0, 0.7);;
+    background-color:  rgba(255,159,0, 0.7);
+    cursor: pointer;
 }
 .button {
     color:#faf9f6;
     padding:0.5rem;
+}
+
+.scoreboard-area {
+    text-align: center;
+    font-size: 1.5rem;
+    
+    /* color: #faf9f6; */
+    margin: 5rem 4rem;
+    
+}
+#scores {
+    color: #faf9f6;
+    text-transform: uppercase;
+    font-size: 1.25rem;
+}
+#scores:hover {
+    text-shadow: 0 0 3px #FF9F00, 0 0 5px #FF9F00;   
 }
