--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ body {
 }
 .play:hover {
     background-color:  rgba(255,159,0, 0.7);
-    cursor: pointer;
+    cursor: pointer
 }
 .button {
     color:#faf9f6;
