--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,3 +137,8 @@ body {
     padding: 0.5rem;
     border-radius: 0.5rem;
 }
+.answer-btn button:hover {
+    border: 0.25rem solid #2B2B2B;
+    background-color: rgba(250,249, 246, 0.8);
+    color:rgba(43, 43, 43, 0.7)
+}
