create a gameover section in html that shows option to play again or view scores

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ body {
     font-weight: bold;
 }
 
-#home-page, #game-page, #scoreboard-area {
+#home-page, #game-page, #gameover-area {
     
     background-color: rgba(193,193,193, 0.9);
     margin: 3rem 2rem;
@@ -92,11 +92,11 @@ body {
     padding:0.5rem;
 }
 
-#game-page, #scoreboard-area {
+#game-page, #gameover-area {
     display: none;
 }
 
-#scoreboard-area {
+#gameover-area {
     text-align: center;
     font-size: 1.5rem;
     
@@ -104,14 +104,14 @@ body {
     margin: 5rem 4rem;
     
 }
-#scores {
+/*#scores {
     color: #faf9f6;
     text-transform: uppercase;
     font-size: 1.25rem;
 }
 #scores:hover {
     text-shadow: 0 0 3px #FF9F00, 0 0 5px #FF9F00;   
-}
+}*/
 .score-container {
     display: flex;
     flex-direction: row;
