--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ body {
     
     margin: 3.5rem;
     top: 5rem;
-    /* text-align: center; */
+     text-align: center; 
     border-radius: 0.5rem;
     font-size: 1rem;
     color: #2B2B2B;
