--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,12 +34,24 @@ body {
     font-size: 2.5rem;
     text-shadow: 0 0 3px #FF9F00, 0 0 5px #FF9F00;
 }
+h2 {
+    font-family: "noto serif",sans-serif;
+}
 
 /*.logo-image {
     
     width: 6rem;
     left: 0.125rem;
 }*/
+#home-question {
+    font-size: 1rem;
+}
+
+#description {
+    background-color: #faf9f6;
+    color: #2B2B2B;
+    text-shadow: 0 0 3px #FF9F00, 0 0 5px #FF9F00;
+}
 
 #logo-text {
     
@@ -148,4 +160,9 @@ body {
 }
 #how-to-play {
     display:none
+}
+
+#home-page a:hover {
+    color:#FF9F00;
+
 }
