--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,7 @@ h2 {
     text-transform: uppercase;
     padding: 0.5rem;
     border-radius: 0.5rem;
+    border: 0.25rem solid #2B2B2B;
     
 }
 .answer-btn button:hover {
