--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,9 +149,17 @@ h2 {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 1rem;
+    background-color: rgba(193,193,193,0.9);
+    padding:0.125rem;
 }
 .score-container p {
-    font-weight: bold;
+    margin:0.25rem;
+    background-color: #FF9F00;
+    color: #faf9f6;
+    padding:0.25rem;
+    border: 0.125rem solid #faf9f6;
+    border-radius: 0.5rem;
+    width:45%;
 }
 
 #questions {
