--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,13 +172,13 @@ h2 {
     
     
     color: #faf9f6;
-    text-decoration: underline;
+    padding:0.25rem;
     text-transform: uppercase;
     /*padding:0.25rem;*/
     /*border-bottom: 0.125rem solid #faf9f6;/
     /*border-radius: 0.5rem;*/
     width:45%;
-    font-size: 0.75rem;
+    font-size: 0.8rem;
     
 }
 
